--- a/website.html
+++ b/website.html
@@ -305,13 +305,13 @@
       <!-- Section: Social media -->
       <section class="d-flex justify-content-center p-4 border-bottom"><!-- Right -->
         <div class="d-flex socialLinks" >
-          <a href="https://www.facebook.com/creasix" class="me-4 text-reset">
+          <a href="https://www.facebook.com/creasix" target="_blank" class="me-4 text-reset">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://www.instagram.com/creasix_id/" class="me-4 text-reset">
+          <a href="https://www.instagram.com/creasix_id/" target="_blank" class="me-4 text-reset">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.linkedin.com/company/creasix" class="me-4 text-reset">
+          <a href="https://www.linkedin.com/company/creasix" target="_blank" class="me-4 text-reset">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
