--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
           <a href="css/img/helloburger.jpg" data-toggle="lightbox" style="text-decoration:none">
             <div class="helloburger">
               <div class="image-overlay text-white text-center">
-                <h2>Unlimited</h2>
+                <h2>Hello Burger</h2>
               </div>
             </div>
           </a>
@@ -111,7 +111,7 @@
           <a href="css/img/Centana.jpg" data-toggle="lightbox" style="text-decoration:none">
             <div class="centana">
               <div class="image-overlay text-white text-center">
-                <h2>Unlimited</h2>
+                <h2>Centana</h2>
               </div>
             </div>
           </a>
@@ -120,7 +120,7 @@
           <a href="css/img/butbetter.jpg" data-toggle="lightbox" style="text-decoration:none">
             <div class="butbetter">
               <div class="image-overlay text-white text-center">
-                <h2>Unlimited</h2>
+                <h2>Built Better</h2>
               </div>
             </div>
           </a>
