--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- Main Content Area -->
     <div class="container my-5 d-grid gap-5">
-      <div class="container">
+      <div class="container border-bottom" style="margin-top:40px;padding-bottom:70px">
         <div class="row align-items-center">
           <div class="col-7" style="padding-right:30px">
             <h1 class="title fw-bold">We Are Creasix</h1>
@@ -107,14 +107,18 @@
           </div>
         </div>
       </div>
-      <div class="container-service"> <h4 class="Service text-center my-4" style="color:#347BC1; font-weight:800;"><span id="Service"></span>Our Service</h5>
+      <div class="container-service">
+        <div class="services text-center" style="margin-bottom:30px">
+          <h4 class="Service text-center" style="color:#347BC1; font-weight:800;"><span id="Service"></span>Our Service</h4>
+          <p>Get to know about services we provide</p>
+        </div>
         <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-center">
           <div class="col">
             <div class="card">
               <img src="css/img/logo-designer.jpg" style="height:200px;overflow:hidden;object-fit:cover" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title" style="font-weight:bold">Logo Design</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text px-4" style="line-height:1.75;text-align:justify;text-align-last:center">Captivate your audience and establish a strong brand identity with our expert logo design service. Our team of talented designers is here to create a visually striking and memorable logo that perfectly reflects your business values.</p>
                 <a class="btn btn-primary" href="logodesign.html" role="button" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .100rem;">
                   Get Started
                 </a>
@@ -126,7 +130,7 @@
               <img src="css/img/website-developer.jpg" style="height:200px;overflow:hidden;object-fit:cover" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title" style="font-weight:bold">Website Development</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text px-4" style="line-height:1.75;text-align:justify;text-align-last:center">Step into the digital realm with confidence and style, courtesy of our exceptional website development service. Our team of skilled developers is dedicated to crafting dynamic, user-friendly websites that captivate audiences and drive tangible results for your business.</p>
                 <a class="btn btn-primary" href="website.html" role="button" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .100rem;">
                   Get Started
                 </a>
@@ -138,7 +142,7 @@
               <img src="css/img/socmed-manager.jpg" style="height:200px;overflow:hidden;object-fit:cover" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" style="font-weight:bold">Social Media Management</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text px-4" style="line-height:1.75;text-align:justify;text-align-last:center">Elevate your brand's online presence with our expert social media management service. Our experienced team knows the ins and outs of social platforms, creating engaging content and building authentic connections with your audience.</p>
                 <a class="btn btn-primary" href="socialmedia.html" role="button" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .100rem;">
                   Get Started
                 </a>
